[build-system]
requires = [
    'setuptools', 
    'setuptools_scm',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'controllables-core'
dynamic = ['version']
description = 'The Framework for Control Systems'
requires-python = '>=3.11'
readme = 'README.md'
license = {file = 'LICENSE.txt'}
dependencies = [
    'energyplus-core==0.1.0a0',
]

[project.optional-dependencies]
examples = [
    'energyplus-datasets',
]
test = [
    'pytest', 
    'pytest-asyncio',
    'energyplus-datasets',
]
docs = [
    'jupyter-book', 
    'sphinxcontrib-mermaid',
]

[tool.setuptools.packages.find]
where = ['packages']
namespaces = true

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = ['./tests']
addopts = '--import-mode=importlib --doctest-modules'